--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./src/scenes/Load.js"></script>
     <script src="./src/scenes/Menu.js"></script>
     <script src="./src/scenes/Credits.js"></script>
+    <script src="./src/scenes/Level1.js"></script>
     <script src="./src/main.js"></script>
     <style>
         body{
