--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <title>Moon Master</title>
     <script src="./lib/phaser.js"></script>
     <script src="./src/prefabs/Player.js"></script>
+    <script src="./src/prefabs/Car.js"></script>
+    <script src="./src/prefabs/Gorgatron.js"></script>
+    <script src="./src/prefabs/Rocket.js"></script>
     <script src="./src/scenes/Load.js"></script>
     <script src="./src/scenes/Menu.js"></script>
     <script src="./src/scenes/Credits.js"></script>
     <script src="./src/scenes/Level1.js"></script>
+    <script src="./src/scenes/Level2.js"></script>
+    <script src="./src/scenes/Level3intro.js"></script>
+    <script src="./src/scenes/Level3.js"></script>
     <script src="./src/main.js"></script>
     <style>
         body{
